# opengl-project-python

./: .gitattributes  .pre-commit-config.yaml  camera.py  main.py  model.py  pyproject.toml  pyrightconfig.json  scene.py  scene_renderer.py  texture.py  vao.py  vbo.py
models/: base_model.py  cat.py  cube.py  low_poly_tree.py  wolf.py
objects/low_poly_tree/: Lowpoly_tree_sample.obj.json
objects/wolf/: Wolf_One_obj.obj.json
shaders/: default.frag  default.vert
