[tool.poetry]
name = "opengl-project-python"
version = "0.1.0"
description = ""
authors = ["Daniel Chico <chico@generalsoftwareinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
moderngl = "^5.12.0"
numpy = "^2.1.3"
pyglm = "^2.7.3"
pywavefront = "^1.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
